# zoitechat

./: meson_options.txt  readme.md
.github/workflows/: appimage-build.yml  manjaro-package-build.yml  windows-build.yml
data/misc/: org.zoitechat.ZoiteChat.metainfo.xml.in
flatpak/: Load-plugins-from-Flatpak-extensions.patch  org.zoitechat.ZoiteChat.json  perl.json
plugins/: meson.build
plugins/fishlim/: fish.c  plugin_zoitechat.c
plugins/lua/: meson.build
src/common/: cfgfiles.c  plugin.c  zoitechat.h
src/fe-gtk/: chanview-tabs.c  chanview-tree.c  chanview.c  fe-gtk.c  fkeys.c  maingui.c  setup.c  userlistgui.c  xtext.c  xtext.h
win32/: zoitechat.sln
win32/installer/: zoitechat.iss.tt
